Fix word wrap in code blocks

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -311,6 +311,7 @@ pre {
   margin: 1rem 0;
   padding: 2rem;
   text-wrap: wrap;
+  word-break: break-all;
   
   & code {
     background: transparent;
